Update android-studio-enable-automatic-memory-heap-resizing.md